--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -3,8 +3,8 @@ $font-weight: 400 !default
 $heading-weight: 400 !default
 $line-height: 1.65 !default
 $link-color: #68f !default
-$dark: #282828 !default
-$light: #ffffff !default
+$dark: #282828 
+$light: #ffffff
 
 @function reduce ($percent)
   @return rgba(mix($dark, $light), $percent / 100)
