--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -70,7 +70,10 @@ pre
   padding: .8em 1.2em
   overflow-x: auto
 
-p code
+pre code
+  all: unset
+
+code
   font-size: .9em
   background: reduce(15)
   opacity: .75
