--- a/_sass/index.sass
+++ b/_sass/index.sass
@@ -1,10 +1,10 @@
-$font-size: calc(0.8rem + 0.25vw) 
-$font-weight: 400
-$heading-weight: 400
-$line-height: 1.65
-$link-color: #68f
-$dark: #282828
-$light: #ffffff
+$font-size: calc(0.8rem + 0.25vw) !default
+$font-weight: 400 !default
+$heading-weight: 400 !default
+$line-height: 1.65 !default
+$link-color: #68f !default
+$dark: #282828 !default
+$light: #ffffff !default
 
 @function reduce ($percent)
   @return rgba(mix($dark, $light), $percent / 100)
